Fixed overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -31,5 +31,5 @@ body {
 }
 
 .sales-price {
-    @apply text-lg text-white;
+    @apply text-lg text-white pt-3 text-center justify-center flex whitespace-nowrap;
 }
